# ogs_riverger

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
src/ogs_riverger/: __init__.py  __main__.py  read_config.py  settings.py
src/ogs_riverger/efas/: cli.py  download_tools.py  efas_config.py  efas_manager.py
src/ogs_riverger/physical_models/: __init__.py  components.py
src/ogs_riverger/pontelagoscuro/: cli.py  download_tools.py
src/ogs_riverger/utils/: area_selection.py  argparse_types.py  array_utils.py  datetime_utils.py  retrievers.py
tests/: conftest.py  fixtures.py  test_efas.py  test_pontelagoscuro.py  test_read_config.py
tests/data/: efas_domain.nc
