[project]
name = "ogs-riverger"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefano Piani",email = "spiani@ogs.it"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "ogs_riverger", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
