[project]
name = "ogs-riverger"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefano Piani",email = "spiani@ogs.it"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "aioftp (>=0.25.1,<1.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "cdsapi (>=0.7.5,<0.8.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xarray (>=2025.2.0,<2027.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "httpx (>=0.27.0,<0.29.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "cfgrib (>=0.9.15.0,<0.10.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "dask (>=2025.4.1,<2027.0.0)",
]


[tool.poetry]
packages = [{include = "ogs_riverger", from = "src"}]


[tool.deptry.per_rule_ignores]
DEP002 = ["cfgrib", "dask", "netcdf4"]


[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
pre-commit = "^4.2.0"
deptry = "^0.23.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers"
markers = [
    "external_resources: run the tests about the rivers that require an external connection",
]


[tool.poetry.scripts]
riverger = "ogs_riverger.__main__:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
